fixtures/valid/type-only-import/src/types/public.ts
export type PublicThing = { value: string };
