fixtures/invalid/unresolved-relative-import/src/core/public.ts
import { missing } from "./missing";

export const value = missing;
